Reverting the change to make it work with JDK24 because it brakes the loading of the settings panel